--- a/client/tag-todo.jade
+++ b/client/tag-todo.jade
@@ -11,8 +11,8 @@ todo
             span \#{id + 1} 
             span(class="{completed: done}") {title}
             &nbsp;
-            a(if="{!done}", onclick="{ parent.done }") done
-            a(if="{done}", onclick="{ parent.undone }") undone
+            a(if="{!done}", onclick="{ parent.done }") doneff
+            a(if="{done}", onclick="{ parent.undone }") undonefff
 
     script
         include tag-todo.js
