--- a/client/tag-todo.jade
+++ b/client/tag-todo.jade
@@ -12,7 +12,7 @@ todo
             span(class="{completed: done}") {title}
             &nbsp;
             a(if="{!done}", onclick="{ parent.done }") doneff
-            a(if="{done}", onclick="{ parent.undone }") undonefff
+            a(if="{done}", onclick="{ parent.undone }") undone
 
     script
         include tag-todo.js
